--- a/CalvaryOpebBibleWebsite/CalvaryOpebBibleWebsite.csproj
+++ b/CalvaryOpebBibleWebsite/CalvaryOpebBibleWebsite.csproj
@@ -194,6 +194,7 @@
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ImagesController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
+    <Compile Include="Controllers\MinistriesController.cs" />
     <Compile Include="DAL\CalvaryContext.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -207,6 +208,7 @@
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\Image.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
+    <Compile Include="Models\Ministries.cs" />
     <Compile Include="Models\Pastor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
@@ -320,6 +322,12 @@
     <Content Include="Views\Web.config" />
     <Content Include="Views\_ChangePasswordPartial.cshtml" />
     <Content Include="Views\_ViewStart.cshtml" />
+    <Content Include="Views\Ministries\HighSchool.cshtml" />
+    <Content Include="Views\Ministries\MiddleSchool.cshtml" />
+    <Content Include="Views\Ministries\Children.cshtml" />
+    <Content Include="Views\Ministries\College.cshtml" />
+    <Content Include="Views\Ministries\Adults.cshtml" />
+    <Content Include="Views\Ministries\Seniors.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
