--- a/CalvaryOpebBibleWebsite/CalvaryOpebBibleWebsite.csproj
+++ b/CalvaryOpebBibleWebsite/CalvaryOpebBibleWebsite.csproj
@@ -409,6 +409,8 @@
     <Content Include="Views\Images\YouthGroup.cshtml" />
     <Content Include="Views\Images\CommunityGroups.cshtml" />
     <Content Include="Views\Images\SundayChurch.cshtml" />
+    <Content Include="Views\Images\LiveStream.cshtml" />
+    <Content Include="Views\Images\Edit.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
