--- a/CalvaryOpebBibleWebsite/CalvaryOpebBibleWebsite.csproj
+++ b/CalvaryOpebBibleWebsite/CalvaryOpebBibleWebsite.csproj
@@ -301,6 +301,10 @@
     <Content Include="Content\Images\00001.jpg" />
     <Content Include="Content\Images\0001_2631.jpg" />
     <Content Include="Content\Images\10455152_10152795167759876_4116836821627683343_n.jpg" />
+    <Content Include="Content\Images\CM.jpg" />
+    <Content Include="Content\Images\fb-follow.jpg" />
+    <Content Include="Content\Images\fb-header.jpg" />
+    <Content Include="Content\Images\icon_res_file.png" />
     <Content Include="Content\Images\Local Business Delivery.JPG" />
     <Content Include="Content\Images\M__0A6E%281%29.jpg" />
     <Content Include="Content\Images\M__6107.jpg" />
