--- a/CalvaryOpebBibleWebsite/Web.config
+++ b/CalvaryOpebBibleWebsite/Web.config
@@ -10,7 +10,7 @@
   <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-CalvaryOpebBibleWebsite-20150401023213.mdf;Initial Catalog=aspnet-CalvaryOpebBibleWebsite-20150401023213;Integrated Security=True" providerName="System.Data.SqlClient" />
-    <add name="CalvaryContext" connectionString="Data Source=(LocalDB)\v11.0;AttachDbFilename=|DataDirectory|\CalvaryOpenBibleWebsite1;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="CalvaryContext" connectionString="Data Source=(LocalDB)\v11.0;AttachDbFilename=|DataDirectory|\CalvaryOpenBibleWebsite;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
