Changes to admin 5/13/15

--- a/CalvaryOpebBibleWebsite/bin/ApplicationInsights.config
+++ b/CalvaryOpebBibleWebsite/bin/ApplicationInsights.config
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <ApplicationInsights xmlns="http://schemas.microsoft.com/ApplicationInsights/2013/Settings">
   <!-- 
     Learn more about Application Insights configuration with ApplicationInsights.config here: 
@@ -52,4 +52,7 @@
   </TelemetryInitializers>
   <!-- This key is for Application Insights resource 'CalvaryOpebBibleWebsite' in resource group 'Default-ApplicationInsights-CentralUS' -->
   <InstrumentationKey>842faeb0-48da-44c6-aaf4-71e0aa7abe6f</InstrumentationKey>
+  <TelemetryChannel>
+    <DeveloperMode>true</DeveloperMode>
+  </TelemetryChannel>
 </ApplicationInsights>
