--- a/CalvaryOpebBibleWebsite/CalvaryOpebBibleWebsite.csproj
+++ b/CalvaryOpebBibleWebsite/CalvaryOpebBibleWebsite.csproj
@@ -228,6 +228,7 @@
     <Compile Include="Controllers\PastorsController.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="App_Data\CalvaryOpenBibleWebsite_log.ldf" />
     <Content Include="bin\Antlr3.Runtime.dll" />
     <Content Include="bin\CalvaryOpebBibleWebsite.dll" />
     <Content Include="bin\CalvaryOpebBibleWebsite.pdb" />
@@ -323,6 +324,7 @@
     <Content Include="ApplicationInsights.config" />
     <Content Include="bin\ApplicationInsights.config" />
     <Content Include="bin\CalvaryOpebBibleWebsite.dll.config" />
+    <Content Include="App_Data\CalvaryOpenBibleWebsite" />
     <None Include="Properties\PublishProfiles\calvaryopenbible %2810%29.pubxml" />
     <None Include="Properties\PublishProfiles\CalvaryOpenBible %282%29.pubxml" />
     <None Include="Properties\PublishProfiles\CalvaryOpenBible %283%29.pubxml" />
@@ -433,9 +435,7 @@
     <Content Include="Views\Images\Videos.cshtml" />
     <Content Include="Views\Ministries\CommunityGroups.cshtml" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="App_Data\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
     <Content Include="fonts\glyphicons-halflings-regular.ttf" />
