--- a/CalvaryOpebBibleWebsite/CalvaryOpebBibleWebsite.csproj
+++ b/CalvaryOpebBibleWebsite/CalvaryOpebBibleWebsite.csproj
@@ -197,6 +197,7 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\ContactController.cs" />
     <Compile Include="Controllers\EventController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ImagesController.cs" />
@@ -435,6 +436,12 @@
     <Content Include="Views\Images\Videos.cshtml" />
     <Content Include="Views\Ministries\CommunityGroups.cshtml" />
     <Content Include="Views\Event\Calendar2.cshtml" />
+    <Content Include="Views\Contact\Create.cshtml" />
+    <Content Include="Views\Contact\Delete.cshtml" />
+    <Content Include="Views\Contact\Details.cshtml" />
+    <Content Include="Views\Contact\Edit.cshtml" />
+    <Content Include="Views\Contact\Index.cshtml" />
+    <Content Include="Views\Contact\Admin.cshtml" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
