--- a/CalvaryOpebBibleWebsite/CalvaryOpebBibleWebsite.csproj
+++ b/CalvaryOpebBibleWebsite/CalvaryOpebBibleWebsite.csproj
@@ -241,9 +241,9 @@
     <Compile Include="Models\Ministries.cs" />
     <Compile Include="Models\MinistriesViewModel.cs" />
     <Compile Include="Models\Pastor.cs" />
-    <Compile Include="obj\Debug\TemporaryGeneratedFile_036C0B5B-1481-4323-8D20-8F5ADCB23D92.cs" />
-    <Compile Include="obj\Debug\TemporaryGeneratedFile_5937a670-0e60-4077-877b-f7221da3dda1.cs" />
-    <Compile Include="obj\Debug\TemporaryGeneratedFile_E7A71F73-0F8D-4B9B-B56E-8E70B10BC5D3.cs" />
+    <Compile Include="obj\Release\TemporaryGeneratedFile_036C0B5B-1481-4323-8D20-8F5ADCB23D92.cs" />
+    <Compile Include="obj\Release\TemporaryGeneratedFile_5937a670-0e60-4077-877b-f7221da3dda1.cs" />
+    <Compile Include="obj\Release\TemporaryGeneratedFile_E7A71F73-0F8D-4B9B-B56E-8E70B10BC5D3.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
       <AutoGen>True</AutoGen>
@@ -255,84 +255,50 @@
     <Compile Include="Controllers\PastorsController.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="App_Data\CalvaryOpenBibleWebsite_log.ldf" />
     <Content Include="bin\Antlr3.Runtime.dll" />
-    <Content Include="bin\CalvaryOpebBibleWebsite.dll" />
-    <Content Include="bin\CalvaryOpebBibleWebsite.pdb" />
     <Content Include="bin\EntityFramework.dll" />
     <Content Include="bin\EntityFramework.SqlServer.dll" />
-    <Content Include="bin\EntityFramework.xml" />
     <Content Include="bin\Microsoft.ApplicationInsights.dll" />
     <Content Include="bin\Microsoft.ApplicationInsights.Extensibility.PerfCollector.dll" />
     <Content Include="bin\Microsoft.ApplicationInsights.Extensibility.RuntimeTelemetry.dll" />
     <Content Include="bin\Microsoft.ApplicationInsights.Extensibility.Web.dll" />
-    <Content Include="bin\Microsoft.ApplicationInsights.Extensions.Intercept_x64.dll" />
-    <Content Include="bin\Microsoft.ApplicationInsights.Extensions.Intercept_x86.dll" />
     <Content Include="bin\Microsoft.AspNet.Identity.Core - Copy.xml" />
     <Content Include="bin\Microsoft.AspNet.Identity.Core.dll" />
     <Content Include="bin\Microsoft.AspNet.Identity.EntityFramework.dll" />
-    <Content Include="bin\Microsoft.AspNet.Identity.EntityFramework.xml" />
     <Content Include="bin\Microsoft.AspNet.Identity.Owin.dll" />
-    <Content Include="bin\Microsoft.AspNet.Identity.Owin.xml" />
     <Content Include="bin\Microsoft.Data.Edm.dll" />
-    <Content Include="bin\Microsoft.Data.Edm.xml" />
     <Content Include="bin\Microsoft.Data.OData.dll" />
-    <Content Include="bin\Microsoft.Data.OData.xml" />
     <Content Include="bin\Microsoft.Data.Services.Client.dll" />
-    <Content Include="bin\Microsoft.Data.Services.Client.xml" />
     <Content Include="bin\Microsoft.Diagnostics.Instrumentation.Extensions.Intercept.dll" />
     <Content Include="bin\Microsoft.Diagnostics.Tracing.EventSource.dll" />
-    <Content Include="bin\Microsoft.Diagnostics.Tracing.EventSource.xml" />
     <Content Include="bin\Microsoft.Owin.dll" />
     <Content Include="bin\Microsoft.Owin.Host.SystemWeb.dll" />
-    <Content Include="bin\Microsoft.Owin.Host.SystemWeb.xml" />
     <Content Include="bin\Microsoft.Owin.Security.Cookies.dll" />
-    <Content Include="bin\Microsoft.Owin.Security.Cookies.xml" />
     <Content Include="bin\Microsoft.Owin.Security.dll" />
     <Content Include="bin\Microsoft.Owin.Security.Facebook.dll" />
-    <Content Include="bin\Microsoft.Owin.Security.Facebook.xml" />
     <Content Include="bin\Microsoft.Owin.Security.Google.dll" />
-    <Content Include="bin\Microsoft.Owin.Security.Google.xml" />
     <Content Include="bin\Microsoft.Owin.Security.MicrosoftAccount.dll" />
-    <Content Include="bin\Microsoft.Owin.Security.MicrosoftAccount.xml" />
     <Content Include="bin\Microsoft.Owin.Security.OAuth.dll" />
-    <Content Include="bin\Microsoft.Owin.Security.OAuth.xml" />
     <Content Include="bin\Microsoft.Owin.Security.Twitter.dll" />
-    <Content Include="bin\Microsoft.Owin.Security.Twitter.xml" />
-    <Content Include="bin\Microsoft.Owin.Security.xml" />
-    <Content Include="bin\Microsoft.Owin.xml" />
     <Content Include="bin\Microsoft.Threading.Tasks.dll" />
     <Content Include="bin\Microsoft.Threading.Tasks.Extensions.Desktop.dll" />
-    <Content Include="bin\Microsoft.Threading.Tasks.Extensions.Desktop.xml" />
     <Content Include="bin\Microsoft.Threading.Tasks.Extensions.dll" />
-    <Content Include="bin\Microsoft.Threading.Tasks.Extensions.xml" />
-    <Content Include="bin\Microsoft.Threading.Tasks.xml" />
     <Content Include="bin\Microsoft.Web.Infrastructure.dll" />
     <Content Include="bin\Microsoft.WindowsAzure.Configuration.dll" />
     <Content Include="bin\Microsoft.WindowsAzure.Storage.dll" />
-    <Content Include="bin\Microsoft.WindowsAzure.Storage.xml" />
     <Content Include="bin\Newtonsoft.Json.dll" />
-    <Content Include="bin\Newtonsoft.Json.xml" />
     <Content Include="bin\Owin.dll" />
     <Content Include="bin\PagedList.dll" />
     <Content Include="bin\PagedList.Mvc.dll" />
-    <Content Include="bin\PagedList.Mvc.xml" />
-    <Content Include="bin\PagedList.xml" />
     <Content Include="bin\System.Spatial.dll" />
-    <Content Include="bin\System.Spatial.xml" />
     <Content Include="bin\System.Web.Helpers.dll" />
-    <Content Include="bin\System.Web.Helpers.xml" />
     <Content Include="bin\System.Web.Mvc.dll" />
-    <Content Include="bin\System.Web.Mvc.xml" />
     <Content Include="bin\System.Web.Optimization.dll" />
-    <Content Include="bin\System.Web.Optimization.xml" />
     <Content Include="bin\System.Web.Razor.dll" />
-    <Content Include="bin\System.Web.Razor.xml" />
     <Content Include="bin\System.Web.WebPages.Deployment.dll" />
-    <Content Include="bin\System.Web.WebPages.Deployment.xml" />
     <Content Include="bin\System.Web.WebPages.dll" />
     <Content Include="bin\System.Web.WebPages.Razor.dll" />
-    <Content Include="bin\System.Web.WebPages.Razor.xml" />
-    <Content Include="bin\System.Web.WebPages.xml" />
     <Content Include="bin\WebGrease.dll" />
     <Content Include="Content\background_clean_1680x1050.jpg" />
     <Content Include="Content\bootstrap-theme.css" />
@@ -358,11 +324,23 @@
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
+    <Content Include="obj\Release\CalvaryOpebBibleWebsite.csproj.FileListAbsolute.txt" />
+    <Content Include="obj\Release\CalvaryOpebBibleWebsite.dll" />
+    <Content Include="obj\Release\CalvaryOpebBibleWebsite.pdb" />
+    <Content Include="obj\Release\Package\CalvaryOpebBibleWebsite.SourceManifest.xml" />
+    <Content Include="obj\Release\Package\FilePreviewParameter.xml" />
+    <Content Include="App_Data\CalvaryOpenBibleWebsite" />
+    <Content Include="obj\Release\_WPPLastBuildInfo.txt" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="ApplicationInsights.config" />
-    <Content Include="bin\ApplicationInsights.config" />
-    <Content Include="bin\CalvaryOpebBibleWebsite.dll.config" />
+    <Content Include="obj\Release\CalvaryOpebBibleWebsite.csprojResolveAssemblyReference.cache" />
+    <Content Include="obj\Release\DesignTimeResolveAssemblyReferencesInput.cache" />
+    <Content Include="obj\Release\InsertEFCodeFirstDeploy\original\Web.config" />
+    <Content Include="obj\Release\InsertEFCodeFirstDeploy\transformed\Web.config" />
+    <Content Include="obj\Release\TransformWebConfig\assist\Web.config" />
+    <Content Include="obj\Release\TransformWebConfig\original\Web.config" />
+    <Content Include="obj\Release\TransformWebConfig\transformed\Web.config" />
     <None Include="Properties\PublishProfiles\calvaryopenbible %2810%29.pubxml" />
     <None Include="Properties\PublishProfiles\CalvaryOpenBible %282%29.pubxml" />
     <None Include="Properties\PublishProfiles\CalvaryOpenBible %283%29.pubxml" />
@@ -372,6 +350,7 @@
     <None Include="Properties\PublishProfiles\Calvaryopenbible %288%29.pubxml" />
     <None Include="Properties\PublishProfiles\calvaryopenbible %289%29.pubxml" />
     <None Include="Properties\PublishProfiles\CalvaryOpenBible.pubxml" />
+    <None Include="Properties\PublishProfiles\calvaryopenbibletest %282%29.pubxml" />
     <None Include="Properties\PublishProfiles\calvaryopenbibletest.pubxml" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -490,7 +469,26 @@
     <None Include="Project_Readme.html" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="App_Data\" />
+    <Folder Include="obj\Release\Database\" />
+    <Folder Include="obj\Release\ProfileTransformWebConfig\transformed\obj\Release\CSAutoParameterize\original\Views\" />
+    <Folder Include="obj\Release\ProfileTransformWebConfig\transformed\obj\Release\CSAutoParameterize\transformed\Views\" />
+    <Folder Include="obj\Release\ProfileTransformWebConfig\transformed\obj\Release\InsertEFCodeFirstDeploy\original\" />
+    <Folder Include="obj\Release\ProfileTransformWebConfig\transformed\obj\Release\InsertEFCodeFirstDeploy\transformed\" />
+    <Folder Include="obj\Release\ProfileTransformWebConfig\transformed\obj\Release\Package\PackageTmp\Views\" />
+    <Folder Include="obj\Release\ProfileTransformWebConfig\transformed\obj\Release\TransformWebConfig\assist\" />
+    <Folder Include="obj\Release\ProfileTransformWebConfig\transformed\obj\Release\TransformWebConfig\original\" />
+    <Folder Include="obj\Release\ProfileTransformWebConfig\transformed\obj\Release\TransformWebConfig\transformed\" />
+    <Folder Include="obj\Release\ProfileTransformWebConfig\transformed\Views\" />
+    <Folder Include="obj\Release\TempPE\" />
+    <Folder Include="obj\Release\TransformWebConfig\transformed\obj\Release\CSAutoParameterize\original\Views\" />
+    <Folder Include="obj\Release\TransformWebConfig\transformed\obj\Release\CSAutoParameterize\transformed\Views\" />
+    <Folder Include="obj\Release\TransformWebConfig\transformed\obj\Release\InsertEFCodeFirstDeploy\original\" />
+    <Folder Include="obj\Release\TransformWebConfig\transformed\obj\Release\InsertEFCodeFirstDeploy\transformed\" />
+    <Folder Include="obj\Release\TransformWebConfig\transformed\obj\Release\Package\PackageTmp\Views\" />
+    <Folder Include="obj\Release\TransformWebConfig\transformed\obj\Release\TransformWebConfig\assist\" />
+    <Folder Include="obj\Release\TransformWebConfig\transformed\obj\Release\TransformWebConfig\original\" />
+    <Folder Include="obj\Release\TransformWebConfig\transformed\obj\Release\TransformWebConfig\transformed\" />
+    <Folder Include="obj\Release\TransformWebConfig\transformed\Views\" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
