--- a/CalvaryOpebBibleWebsite/CalvaryOpebBibleWebsite.csproj
+++ b/CalvaryOpebBibleWebsite/CalvaryOpebBibleWebsite.csproj
@@ -337,6 +337,7 @@
     <None Include="Properties\PublishProfiles\calvaryopenbibletest %283%29.pubxml" />
     <None Include="Properties\PublishProfiles\calvaryopenbibletest %284%29.pubxml" />
     <None Include="Properties\PublishProfiles\calvaryopenbibletest %285%29.pubxml" />
+    <None Include="Properties\PublishProfiles\calvaryopenbibletest %286%29.pubxml" />
     <None Include="Properties\PublishProfiles\calvaryopenbibletest.pubxml" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
