--- a/CalvaryOpebBibleWebsite/CalvaryOpebBibleWebsite.csproj
+++ b/CalvaryOpebBibleWebsite/CalvaryOpebBibleWebsite.csproj
@@ -338,6 +338,7 @@
     <None Include="Properties\PublishProfiles\calvaryopenbibletest %284%29.pubxml" />
     <None Include="Properties\PublishProfiles\calvaryopenbibletest %285%29.pubxml" />
     <None Include="Properties\PublishProfiles\calvaryopenbibletest %286%29.pubxml" />
+    <None Include="Properties\PublishProfiles\calvaryopenbibletest %287%29.pubxml" />
     <None Include="Properties\PublishProfiles\calvaryopenbibletest.pubxml" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
